Send join and leave notifications to clients

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,11 @@
 html {
     font-family: sans-serif;
 }
+
+#participants {
+    float: right;
+}
+
+#participants .you {
+    background-color: #cfc;
+}
