Try fading out underlines for edits

--- a/public/_static/css/style.css
+++ b/public/_static/css/style.css
@@ -11,5 +11,6 @@ html {
 }
 
 .edit {
-    box-shadow: inset 0 -1px 0 0 blue;
+    /* box-shadow: inset 0 -1px 0 0 blue; */
+    border-bottom: 1px solid blue;
 }
