--- a/public/_static/css/style.css
+++ b/public/_static/css/style.css
@@ -13,3 +13,13 @@ html {
 .edit {
     color: #00c;
 }
+
+.participant-cursor {
+  width: 0; 
+  height: 0; 
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-bottom: 3px solid black;
+  margin-left: -3px;
+  margin-top: -3px;
+}
