--- a/public/_static/css/style.css
+++ b/public/_static/css/style.css
@@ -19,7 +19,7 @@ html {
   height: 0; 
   border-left: 3px solid transparent;
   border-right: 3px solid transparent;
-  border-bottom: 3px solid black;
+  border-bottom: 3px solid #00c;
   margin-left: -3px;
   margin-top: -3px;
 }
