Example JS test using ts-mocha

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -13,4 +13,7 @@
 
 {% block scripts %}
 <script src="/_static/js/editor.js"></script>
+<script>
+ window.editor = new Editor(document.getElementById('editor'));
+</script>
 {% endblock scripts %}
