Use jsdom for test environment and add tslint pass to npm test

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -12,7 +12,7 @@
 {% endblock content %}
 
 {% block scripts %}
-<script src="/_static/js/editor.js"></script>
+<script src="/_static/js/main.js"></script>
 <script>
  window.editor = new Editor(document.getElementById('editor'));
 </script>
