Include participants window styles

--- a/public/src/_static/css/participants.css
+++ b/public/src/_static/css/participants.css
@@ -1,7 +1,7 @@
-tamawiki-participants {
+tw-participants {
     float: right;
 }
 
-tamawiki-participants .you {
+tw-participants .you {
     background-color: #cfc;
 }
