--- a/public/src/_static/css/editor.css
+++ b/public/src/_static/css/editor.css
@@ -3,11 +3,8 @@
 }
 
 .participant-cursor {
-  width: 0; 
-  height: 0; 
-  border-left: 3px solid transparent;
-  border-right: 3px solid transparent;
-  border-bottom: 3px solid #00c;
-  margin-left: -3px;
-  margin-top: -3px;
+    border-left: 2px solid #00c;
+    margin: 0 -1px;
+    padding: 0;
+    z-index: 0;
 }
