Display pages using monospace font and increase default font size

--- a/public/src/_static/css/base.css
+++ b/public/src/_static/css/base.css
@@ -1,3 +1,14 @@
 html {
     font-family: sans-serif;
+    font-size: 12pt;
+}
+
+.page-content {
+    margin: 0;
+    padding: 4px;
+    white-space: pre-wrap;
+}
+
+#actions {
+    margin-bottom: 2em;
 }
