--- a/templates/editor.html
+++ b/templates/editor.html
@@ -4,6 +4,9 @@
 <a href="?">View</a>
 {% endblock actions %}
 
+{% block heading %}
+{% endblock heading %}
+
 {% block content %}
 
 <tw-editor initial-seq="{{ seq }}"
