--- a/templates/document.html
+++ b/templates/document.html
@@ -4,10 +4,13 @@
 <a href="?action=edit">Edit</a>
 {% endblock actions %}
 
+{% block heading %}
+{% endblock heading %}
+
 {% block content %}
-{{ content }}
+<pre class="page-content">{{ content }}</pre>
 {% endblock content %}
 
 {% block footer %}
-Version: {{ seq }}
+<!-- Version: {{ seq }} -->
 {% endblock footer %}
