--- a/templates/new_document.html
+++ b/templates/new_document.html
@@ -4,6 +4,8 @@
 <a href="?action=edit">Edit</a>
 {% endblock actions %}
 
+{% block heading %}
+{% endblock heading %}
+
 {% block content %}
-The requested page does not exist
 {% endblock content %}
